<resources>
    <string name="app_name">File Manager Photo Editor</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor.
        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut
        libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt
        dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor bibendum, vel congue leo
        egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin
        libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta sed.
        Integer id ultrices magna, in luctus elit. Sed a pellentesque est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor varius. Quisque
        elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra ipsum. Nunc quis augue
        egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer dictum, lorem sed
        efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus libero vel nunc consequat, quis tincidunt
        nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="close">Close</string>

    <string name="granted_permissions">Granted: %s</string>
    <string name="permanently_denied_permissions">Permanently denied: %s</string>
    <string name="permissions_required">Permissions required</string>
    <string name="rationale_permissions">Rationale: %s</string>
    <string name="request_again">Request again</string>

    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="adjust">Adjust</string>
    <string name="filter">Filter</string>
    <string name="save">Save</string>
    <string name="ratio_custom">Free</string>
    <string name="ratio_4_3">4:3</string>
    <string name="ratio_1_1">1:1</string>
    <string name="ratio_16_9">16:9</string>
    <string name="ratio_3_2">3:2</string>
    <string name="ratio_9_16">9:16</string>
    <string name="ratio_2_3">2:3</string>
    <string name="ratio_5_4">5:4</string>
    <string name="ratio_4_5">4:5</string>
    <string name="ratio_3_1">3:1</string>
    <string name="ratio_3_4">3:4</string>
    <string name="rotate_left">Left</string>
    <string name="rotate_right">Right</string>
    <string name="contrast">Contrast</string>
    <string name="hue">Hue</string>
    <string name="saturation">Saturation</string>
    <string name="sharpen">Sharpen</string>
    <string name="brightness">Brightness</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="none">None</string>
    <string name="hdr">HDR</string>
    <string name="b_w">B/W</string>
    <string name="sharp">Sharp</string>
    <string name="vibrant">Vibrant</string>
    <string name="undo">Undo</string>
    <string name="text">Text</string>
    <string name="draw">Draw</string>
    <string name="background">Background</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Please Wait…</string>
    <string name="type_anything">Type anything here…</string>
    <string name="colors">Colors:</string>
    <string name="solid">Solid</string>
    <string name="gradient">Gradient</string>
    <string name="pattern">pattern</string>

</resources>