<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ja.burhanrashid52.photoeditor.PhotoEditorView
        android:id="@+id/photoEditorView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@+id/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:photo_src="@drawable/paris_tower"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/photoEditorView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/photoEditorView"
        app:layout_constraintTop_toTopOf="@id/photoEditorView"
        tools:src="@tools:sample/avatars"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="@dimen/spacing_s"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photoEditorView" />


    <ImageView
        android:id="@+id/preview"
        style="@style/AddRippleEffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/undo"
        android:src="@drawable/ic_photo_preview"
        app:layout_constraintBottom_toBottomOf="@+id/done"
        app:layout_constraintEnd_toStartOf="@+id/done"
        app:layout_constraintTop_toTopOf="@+id/close" />

    <ImageView
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_s"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_tick_done"
        app:layout_constraintBottom_toBottomOf="@+id/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/close" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solid" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gradient" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pattern" />

    </com.google.android.material.tabs.TabLayout>

    <ImageView
        android:id="@+id/colorPicker"
        style="@style/AddRippleEffect"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_color_picker"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tabLayout"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tabLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        tools:itemCount="23"
        tools:listitem="@layout/item_background_fragment" />

</androidx.constraintlayout.widget.ConstraintLayout>
