<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".photoViewer.draw.DrawFragment">

    <ja.burhanrashid52.photoeditor.PhotoEditorView
        android:id="@+id/photoEditorView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:photo_src="@drawable/paris_tower" />

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/photoEditorView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/photoEditorView"
        app:layout_constraintTop_toTopOf="@id/photoEditorView"
        tools:src="@tools:sample/avatars"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photoEditorView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/close"
                style="@style/AddRippleEffect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/close"
                android:src="@drawable/ic_close" />

            <ImageView
                android:id="@+id/undo"
                style="@style/AddRippleEffect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:alpha="0.5"
                android:contentDescription="@string/undo"
                android:src="@drawable/ic_undo" />


            <ImageView
                android:id="@+id/redo"
                style="@style/AddRippleEffect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:alpha="0.5"
                android:contentDescription="@string/undo"
                android:scaleX="-1"
                android:src="@drawable/ic_undo" />


            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAppearance="@style/DescriptionHeading"
                android:textColor="@color/primaryColor" />

            <ImageView
                android:id="@+id/preview"
                style="@style/AddRippleEffect"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/spacing_xs"
                android:contentDescription="@string/undo"
                android:src="@drawable/ic_photo_preview" />

            <ImageView
                android:id="@+id/done"
                style="@style/AddRippleEffect"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/close"
                android:src="@drawable/ic_tick_done" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:text="@string/colors"
                android:textAppearance="@style/DescriptionHeading" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/color_picker_item_list" />
        </LinearLayout>

        <com.google.android.material.slider.Slider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:value="12"
            android:valueFrom="0"
            android:valueTo="100" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

